--- a/Delete_Book.html
+++ b/Delete_Book.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-<title >Add book</title>
+<title >Delet Book</title>
 
 	
     <!-- Bootstrap core CSS -->
@@ -18,16 +18,10 @@
     <link href="css/modern-business.css" rel="stylesheet">
 
 
-
-
-
-
-
-
-
+ 
 
 	</head>
-  <body>
+	  <body>
 
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -41,14 +35,14 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item active dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Categories 
+                Categories
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                 <a class="dropdown-item" href="portfolio-3-col.html">Category 1</a>
                 <a class="dropdown-item" href="portfolio-3-col.html">Category 2</a>
-                <a class="dropdown-item active" href="portfolio-3-col.html">Category 3</a>
+                <a class="dropdown-item" href="portfolio-3-col.html">Category 3</a>
                 <a class="dropdown-item" href="portfolio-3-col.html">Category 4</a>
                 <a class="dropdown-item" href="portfolio-3-col.html">Category 5</a>
               </div>
@@ -67,40 +61,13 @@
     </nav>
 	
 	<div>
-	<form id="addBookForm">
-
-		<label>Title:
-	<input type="text" class="form-control" name="title" size="50">
+	<form id="AddnewCategory">
+	<label>Book ID:
+	<input type="text" class="form-control" name="bookId" size="50">
 	</label><br><br>
-		<label>ISBN:
-	<input type="text" class="form-control" name="isbn" size="50">
+		<label>Book title:
+	<input type="text" class="form-control" name="book_title" size="50">
 	</label><br><br>
-			<label>Author:
-	<input type="text" class="form-control" name="auther" size="50">
-	</label><br><br>
-		<label>Publisher:
-	<input type="text" class="form-control" name="publisher" size="50">
-	</label><br><br>
-			<label>Category:
-	<input type="text" class="form-control" name="category" size="50">
-	</label><br><br>
-			<label>Number of Pages:
-	<input type="text" class="form-control" name="pages" size="50">
-	</label><br><br>
-			<label>Book language:
-	<input type="text" class="form-control" name="language" size="50">
-	</label><br><br>
-				<label>book picture:
-	<input type="file"  name="picture" size="50">
-	</label><br><br>
-				<label>Description:
-	<textarea  class="form-control" name="description" rows="30" cols="100" ></textarea>
-	</label><br><br>
-	
-	
-
-
-	
 <input type="submit" value="Add">
 <input type="reset" value="Reset">
 	   <br><br>
@@ -123,7 +90,6 @@
   </body>
 
 </html>
-
 	
 	
 	
