--- a/librarian_profile.html
+++ b/librarian_profile.html
@@ -8,31 +8,22 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-<title >Add book</title>
+    <title>librarian profile</title>
 
-	
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
 
+  </head>
 
-
-
-
-
-
-
-
-
-	</head>
   <body>
 
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="index.html">name of library</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,73 +32,68 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item active dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Categories 
+                Categories
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                 <a class="dropdown-item" href="portfolio-3-col.html">Category 1</a>
                 <a class="dropdown-item" href="portfolio-3-col.html">Category 2</a>
-                <a class="dropdown-item active" href="portfolio-3-col.html">Category 3</a>
+                <a class="dropdown-item" href="CategoryPage.html">Category 3</a>
                 <a class="dropdown-item" href="portfolio-3-col.html">Category 4</a>
                 <a class="dropdown-item" href="portfolio-3-col.html">Category 5</a>
               </div>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Profile
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                <a class="dropdown-item" href="librarian_profile.html">librarian profile</a>
+                <a class="dropdown-item active" href="librarian_profile.html">main page of librarian profile</a>
               </div>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-	
-	<div>
-	<form id="addBookForm">
 
-		<label>Title:
-	<input type="text" class="form-control" name="title" size="50">
-	</label><br><br>
-		<label>ISBN:
-	<input type="text" class="form-control" name="isbn" size="50">
-	</label><br><br>
-			<label>Author:
-	<input type="text" class="form-control" name="auther" size="50">
-	</label><br><br>
-		<label>Publisher:
-	<input type="text" class="form-control" name="publisher" size="50">
-	</label><br><br>
-			<label>Category:
-	<input type="text" class="form-control" name="category" size="50">
-	</label><br><br>
-			<label>Number of Pages:
-	<input type="text" class="form-control" name="pages" size="50">
-	</label><br><br>
-			<label>Book language:
-	<input type="text" class="form-control" name="language" size="50">
-	</label><br><br>
-				<label>book picture:
-	<input type="file"  name="picture" size="50">
-	</label><br><br>
-				<label>Description:
-	<textarea  class="form-control" name="description" rows="30" cols="100" ></textarea>
-	</label><br><br>
-	
-	
+    <!-- Page Content -->
+    <div class="container">
 
+      <!-- Page Heading/Breadcrumbs -->
+      <h1 class="mt-4 mb-3">profile
+        <small>Subheading</small>
+      </h1>
 
-	
-<input type="submit" value="Add">
-<input type="reset" value="Reset">
-	   <br><br>
-	</form>
-	</div>
-	
-	
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">About</li>
+      </ol>
+
+      <!-- Content Row -->
+      <div class="row">
+        <!-- Sidebar Column -->
+        <div class="col-lg-3 mb-4">
+          <div class="list-group">
+		    <a href="services.html" class="list-group-item">My Inforomation</a>
+            <a href="Add_book.html" class="list-group-item">Add New Book</a>
+            <a href="Delete_Book.html" class="list-group-item">Delete Book</a>
+			<a href="Creat_a_new_category.html" class="list-group-item">Create a new book category</a>
+          </div>
+        </div>
+        <!-- Content Column -->
+        <div class="col-lg-9 mb-4">
+          <h2>Section Heading</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure maxime ducimus fugit.</p>
+        </div>
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
@@ -123,15 +109,3 @@
   </body>
 
 </html>
-
-	
-	
-	
-	
-	
-	
-	
-	
-	
-
- 
